--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    {% include head.html %}
-</head>
-<body>
 
-    {% include head.html %}
+  {% include head.html %}
 
-    <main class="content">
-        {{ content }}
+  <body>
+
+    {% include navigation.html %}
+
+    <main>
+      {{ content }}
     </main>
 
     {% include footer.html %}
-
-    {% include scripts.html %}
-</body>
+  </body>
 </html>
