--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
       <li><a href="{{ '/tags' | prepend: site.baseurl }}">Tags</a></li>
       <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
-      <li><a href="{{ '/member' | prepend: site.baseurl }}">Member</a></li>
+      <li><a href="{{ '/member' | prepend: site.baseurl }}">member</a></li>
       <li><a href="{{ '/publications' | prepend: site.baseurl }}">publications</a></li>
       <li><a href="{{ '/research' | prepend: site.baseurl }}">research</a></li>
     </ul>
