--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -36,8 +36,13 @@ h6 {
 }
 
 a {
-  color: $blue;
+  color: black;
   text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: orange;
 }
 
 blockquote {
