--- a/_sass/tale/_layout.scss
+++ b/_sass/tale/_layout.scss
@@ -61,8 +61,13 @@ footer,
   }
 
   a {
-    color: $default-color;
     font-family: $sans-serif;
+    color: black;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  a:hover {
+    color: orange;
   }
 }
 
